# plume

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_wheels.yml  unittest.yml
plume/: __init__.py  cli.py  config.py  core.py  defaults.json  gui.py
tests/: test_cli.py  test_core.py
