[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plume"
version = "0.1.0"
description = "A tool to sign and verify files using Nostr. Think GPG, but user-friendly"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "electrum-ecc",
    "electrum-aionostr",
    "pycryptodomex",  # FIXME: this is acutually not needed (no message encryption) but aionostr raises if it is not available
    "aiohttp-socks",
    "certifi",
    "platformdirs",
]

[project.scripts]
plume = "plume.gui:main"
plume-cli = "plume.cli:main"

[tool.setuptools.packages.find]
where = ["."]
