[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plume"
version = "0.1.0"
description = "A tool to sign and verify files using Nostr. Think GPG, but user-friendly"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "electrum-ecc",
    "electrum-aionostr",
    "pycryptodomex",  # FIXME: this is acutually not needed (no message encryption) but aionostr raises if it is not available
    "aiohttp-socks",
    "certifi",
    "platformdirs",
]

[project.scripts]
plume = "plume.gui:main"
plume-cli = "plume.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.cibuildwheel]
# Skip 32-bit builds and PyPy
skip = ["*-win32", "*-manylinux_i686", "pp*"]

# Test the wheels after building to ensure they work
test-command = "python -m unittest discover {project}/tests"

[tool.cibuildwheel.linux]
# Install system libraries required for compilation
before-all = "yum install -y gcc make autoconf automake libtool"

[tool.cibuildwheel.macos]
before-all = "brew install gcc make autoconf automake libtool"
